# sdk

./: .gitignore  CHANGELOG.md  LICENSE  MCP_CONFIG.md  PARTNER_ONBOARDING.md  QUICKSTART.md  README.md
examples/: README.md
examples/_generic-x402-bridge/: .env.example  package.json  server.js  store.js
examples/autogpt/: README.md  loop.py
examples/claude-mcp/: README.md
examples/crewai/: README.md  crew.py
examples/echo-x402-server/: .env.example  README.md  package.json  server.js  test-client.js
examples/exa-x402-bridge/: .env.example  README.md  gen-test-wallet.js  package-lock.json  package.json  server.js  store.js  test-client.js
examples/exa-x402-bridge/demo/: README.md  demo.tape
examples/flowise/: README.md  payable_fetch_tool.json
examples/gcore-x402-bridge/: .env.example  README.md  package.json  server.js  store.js
examples/io-net-x402-bridge/: .env.example  README.md  package-lock.json  package.json  server.js
examples/langchain/: README.md  agent.py
examples/new-wallet/: README.md  new-wallet.mjs  package.json
examples/openai-agent/: README.md  agent.py
examples/venice-x402-bridge/: .env.example  README.md  package-lock.json  package.json  server.js  store.js
mcp/: README.md  package-lock.json  package.json  server.json  smithery.yaml  tsconfig.json
mcp-http/: README.md  package-lock.json  package.json  server.js
mcp/src/: config.ts  directory.ts  index.ts  server.ts
mcp/src/tools/: agent-address.ts  agent-call.ts  agent-claim-self.ts  agent-quote.ts  directory.ts  pay-with-split.ts  payable-fetch.ts
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: agent.ts  crossChain.ts  crypto.ts  errors.ts  index.ts  unifiedAgent.ts
node/src/facilitators/: aifinpay.ts  base.ts  coinbase.ts  detect.ts  index.ts  standard-x402.ts
node/tests/: crossChain.test.ts  discovery.test.ts  facilitators.test.ts  network.test.ts
python/: .gitignore  README.md  pyproject.toml
python/aifinpay/: __init__.py  client.py  cross_chain.py  errors.py  unified_agent.py
python/aifinpay/facilitators/: __init__.py  aifinpay.py  base.py  coinbase.py  detect.py
python/tests/: test_cross_chain.py  test_facilitators.py  test_network.py
scripts/: new-provider.mjs
skills/: SKILL.md
