[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifinpay-agent"
version = "0.2.0a2"
description = "Non-custodial multi-facilitator x402 client for autonomous AI agents (AiFinPay native + Coinbase x402 detection)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "CoinSecurities (SECCO)", email = "contact@aifinpay.company" },
]
keywords = [
  "ai-agent", "ai-agents", "agentic-ai", "autonomous-agents",
  "agent-payments", "agent-commerce",
  "x402", "mcp", "model-context-protocol",
  "payments", "crypto-payments",
  "polygon", "solana", "stablecoin", "usdc",
  "non-custodial", "ed25519",
  "stripe-for-ai-agents",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyNaCl>=1.5",
  "base58>=2.1",
  "requests>=2.28",
]

[project.urls]
Homepage = "https://aifinpay.company"
Documentation = "https://aifinpay.company/docs"
Repository = "https://github.com/AiFinPay/sdk"
Issues = "https://github.com/AiFinPay/sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aifinpay*"]
